# gcli2api

./: .gitignore  AGENTS.md  README.md  config.py  findings.md  log.py  progress.md  pyproject.toml  requirements-termux.txt  requirements.txt  start.bat  start.sh  task_plan.md  version.txt  web.py
docs/: USAGE_zh.md
src/: auth.py  models.py  utils.py
src/api/: antigravity.py  vertex.py
src/converter/: gemini_fix.py  openai2gemini.py
src/panel/: creds.py
src/router/vertex/: gemini.py  model_list.py  openai.py
src/storage/: mongodb_manager.py  psql_manager.py  sqlite_manager.py
tests/: test_smoke.py
