[project]
name = "gcli2api"
version = "0.1.0"
description = "Convert GeminiCLI to OpenAI and Gemini API interfaces"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "CNC-1.0"}
authors = [
    {name = "su-kaka"}
]
keywords = ["gemini", "openai", "api", "converter", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.116.1",
    "httpx[socks]>=0.28.1",
    "hypercorn>=0.17.3",
    "motor>=3.7.1",
    "oauthlib>=3.3.1",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pypinyin>=0.51.0",
    "aiosqlite>=0.20.0",
    "redis>=7.2.0",
    "asyncpg>=0.31.0",
    "wreq>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--ignore=.pixi",
    "--ignore=.venv",
    "--ignore=creds",
    "--ignore-glob=.pixi/*",
    "--ignore-glob=.venv/*",
    "--ignore-glob=creds/*",
    "--ignore-glob=*/.pixi/*",
    "--ignore-glob=*/.venv/*",
]
norecursedirs = [
    ".git",
    ".pixi",
    ".venv",
    "__pycache__",
    "build",
    "creds",
    "dist",
]

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "build",
    "dist",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.12,<3.14"

[tool.pixi.pypi-dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.1.0"
black = ">=24.0.0"
flake8 = ">=7.0.0"
mypy = ">=1.8.0"
pre-commit = ">=3.6.0"

[tool.pixi.tasks]
start = "python web.py"
dev = "python web.py"
test = "python -m pytest --rootdir=. tests"
format = "python -m black ."
lint = "python -m flake8 ."
typecheck = "python -m mypy src config.py web.py log.py"
